  * rubilicious.gemspec: ditto

* Fri Mar 11 02:59:50 2005, pabs <pabs@pablotron.org>
  * releasing 0.1.4

* Sun May 29 19:31:03 2005, pabs <pabs@pablotron.org>
  * README: add note about bugs.p.o
  * README: increment versoin to 0.1.5
  * rubilicious.rb: ditto
  * rubilicious.gemspec: ditto

* Sun May 29 19:57:36 2005, pabs <pabs@pablotron.org>
  * rubilicious.rb: fix friggin HTTP proxy support (Fixes: #21)

* Sun May 29 20:01:29 2005, pabs <pabs@pablotron.org>
  * rubilicious.rb: fix Rubilicious#delete (reported by Ruben Laguna 
    Fixes: #23)

* Sun May 29 20:06:11 2005, pabs <pabs@pablotron.org>
  * examples/add_link.rb: fix bugs reported by Jon on Rubilicious
    project page (http://pablotron.org/software/rubilicious/) (Fixes: #24)

* Sun May 29 20:10:53 2005, pabs <pabs@pablotron.org>
  * ChangeLog: don't forget to note whichb ug was fixed!

* Sun May 29 21:01:12 2005, pabs <pabs@pablotron.org>
  * rubilicious.rb: add Rubilicious#update
  * rubilicious.rb: fix Rubilicious#all (Fixes: #22)
  * rubilicious.rb: add support for tag bundles (Rubilicious#bundles,
    Rubilicious#set_bundle, and Rubilicious#delete_bundle)

* Sun May 29 21:12:16 2005, pabs <pabs@pablotron.org>
  * rubilicious.rb: add opt parameter to Rubilicious::new

* Sun May 29 21:23:06 2005, pabs <pabs@pablotron.org>
  * rubilicious.rb: better documentation for #new opt argument
  * rubilicious.rb: del.icio.us => Delicious (except in URLs)
  * rubilicious.rb: copyright year update
  * COPYING: ditto

* Sun May 29 21:27:20 2005, pabs <pabs@pablotron.org>
  * rubilicious.gemspec: 'www.' => ''

* Sun May 29 21:28:39 2005, pabs <pabs@pablotron.org>
  * releasing 0.1.5

* Sun May 29 22:29:02 2005, pabs <pabs@pablotron.org>
  * added AUTHORS
	* rubilicious.rb: removed shebang (as per Nobuhiro's request)
	* rubilicious.rb: incremented version to 0.1.6
	* README: ditto

* Sun May 29 22:37:21 2005, pabs <pabs@pablotron.org>
  * rubilicious.gemspec: increment versoin to 0.1.6